--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -13,13 +13,6 @@ categories:
     label: 'changelog:removed :wastebasket:'
   - title: 'Sicherheit'
     label: 'changelog:security :shield:'
-include-labels:
-  - 'changelog:added :heavy_plus_sign:'
-  - 'changelog:changed :pencil2:'
-  - 'changelog:deprecated :x:'
-  - 'changelog:fixed :+1:'
-  - 'changelog:removed :wastebasket:'
-  - 'changelog:security :shield:'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&'
 version-resolver:
@@ -33,6 +26,16 @@ version-resolver:
     labels:
       - 'version:patch'
   default: patch
+include-labels:
+  - 'changelog:added :heavy_plus_sign:'
+  - 'changelog:changed :pencil2:'
+  - 'changelog:deprecated :x:'
+  - 'changelog:fixed :+1:'
+  - 'changelog:removed :wastebasket:'
+  - 'changelog:security :shield:'
+  - 'version:major'
+  - 'version:minor'
+  - 'version:patch'
 template: |
   ## Änderungen
 
