Schränke Labels nicht ein

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -18,24 +18,24 @@ change-title-escapes: '\<*_&'
 version-resolver:
   major:
     labels:
-      - 'major'
+      - 'version:major'
   minor:
     labels:
-      - 'minor'
+      - 'version:minor'
   patch:
     labels:
-      - 'patch'
+      - 'version:patch'
   default: patch
-include-labels:
-  - 'changelog:added :heavy_plus_sign:'
-  - 'changelog:changed :pencil2:'
-  - 'changelog:deprecated :x:'
-  - 'changelog:fixed :+1:'
-  - 'changelog:removed :wastebasket:'
-  - 'changelog:security :shield:'
-  - 'major'
-  - 'minor'
-  - 'patch'
+#include-labels:
+#  - 'changelog:added :heavy_plus_sign:'
+#  - 'changelog:changed :pencil2:'
+#  - 'changelog:deprecated :x:'
+#  - 'changelog:fixed :+1:'
+#  - 'changelog:removed :wastebasket:'
+#  - 'changelog:security :shield:'
+#  - 'major'
+#  - 'minor'
+#  - 'patch'
 template: |
   ## Änderungen
 
